feat: Add Governorate management functionality (#43)
- Implemented GovernorateController to handle API requests for governorates.
- Created GovernorateService for business logic related to governorates.
- Added GovernorateRepository for database interactions with governorate entities.
- Defined Governorate model with necessary fields and annotations.
- Introduced GovernorateResponse DTO for transferring governorate data.
- Updated CarListing model to include governorate information.
- Enhanced CarListingMapper to map governorate details to CarListingResponse.
- Modified CarListingResponse to include denormalized governorate fields.
- Updated tests for CarListingResponse to validate new governorate fields.
- Improved JWT utility and authentication filter with null checks and logging.
- Refactored file validation logic to ensure proper error handling.

Co-authored-by: Ali-Ahdab <ali.ahdab@telavox.com>